--- a/website.html
+++ b/website.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6cdc4b2e15.js" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/6cdc4b2e15.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="custom1.css">
+    <link rel="stylesheet" href="contributor.css">
     <title></title>
 </head>
 <body>
